--- a/staffmeals.html
+++ b/staffmeals.html
@@ -354,6 +354,7 @@ select option:hover {
         <select id="employeeSelect" required>
           <option value="" disabled selected>Select employee</option>
           <option value="Savannah">Savannah</option>
+          <option value="Munch">Munch</option>
           <option value="Mac">Mac</option>
           <option value="Slade">Slade</option>
           <option value="Jack">Jack</option>
@@ -362,8 +363,10 @@ select option:hover {
           <option value="Emeric">Emeric</option>
           <option value="Chaos">Chaos</option>
           <option value="Rohan">Rohan</option>
-          <option value="Joey">Joey</option>
           <option value="Rico">Rico</option>
+          <option value="Jesus">Jesus</option>
+          <option value="Jerry">Jerry</option>
+          <option value="Torch">Torch</option>
         </select>
       </div>
 
