--- a/register.html
+++ b/register.html
@@ -810,6 +810,7 @@
   <select id="employeeName" required style="display:none;">
     <option value="" disabled selected>Select employee</option>
     <option value="Savannah">Savannah</option>
+    <option value="Mac">Munch</option>
     <option value="Mac">Mac</option>
     <option value="Slade">Slade</option>
     <option value="Jack">Jack</option>
@@ -818,14 +819,17 @@
     <option value="Emeric">Emeric</option>
     <option value="Chaos">Chaos</option>
     <option value="Rohan">Rohan</option>
-    <option value="Joey">Joey</option>
     <option value="Rico">Rico</option>
+    <option value="Jesus">Jesus</option>
+    <option value="Jerry">Jerry</option>
+    <option value="Torch">Torch</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
     <div class="select-selected">Select employee</div>
     <div class="select-items select-hide">
       <div data-value="Savannah">Savannah</div>
+      <div data-value="Munch">Munch</div>
       <div data-value="Mac">Mac</div>
       <div data-value="Slade">Slade</div>
       <div data-value="Jack">Jack</div>
@@ -834,8 +838,10 @@
       <div data-value="Emeric">Emeric</div>
       <div data-value="Chaos">Chaos</div>
       <div data-value="Rohan">Rohan</div>
-      <div data-value="Joey">Joey</div>
       <div data-value="Rico">Rico</div>
+      <div data-value="Jesus">Jesus</div>
+      <div data-value="Jerry">Jerry</div>
+      <div data-value="Torch">Torch</div>
     </div>
   </div>
 </div>
