--- a/register.html
+++ b/register.html
@@ -823,6 +823,7 @@
     <option value="Jesus">Jesus</option>
     <option value="Jerry">Jerry</option>
     <option value="Torch">Torch</option>
+    <option value="Jaxon">Jaxon</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -842,6 +843,7 @@
       <div data-value="Jesus">Jesus</div>
       <div data-value="Jerry">Jerry</div>
       <div data-value="Torch">Torch</div>
+      <div data-value="Jaxon">Jaxon</div>
     </div>
   </div>
 </div>
