--- a/staffmeals.html
+++ b/staffmeals.html
@@ -367,6 +367,7 @@ select option:hover {
           <option value="Jesus">Jesus</option>
           <option value="Jerry">Jerry</option>
           <option value="Torch">Torch</option>
+          <option value="Jaxon">Jaxon</option>
         </select>
       </div>
 
