--- a/staffmeals.html
+++ b/staffmeals.html
@@ -368,6 +368,7 @@ select option:hover {
           <option value="Jerry">Jerry</option>
           <option value="Torch">Torch</option>
           <option value="Jaxon">Jaxon</option>
+          <option value="Julian">Julian</option>
         </select>
       </div>
 
