--- a/register.html
+++ b/register.html
@@ -824,6 +824,7 @@
     <option value="Jerry">Jerry</option>
     <option value="Torch">Torch</option>
     <option value="Jaxon">Jaxon</option>
+     <option value="Julian">Julian</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -844,6 +845,7 @@
       <div data-value="Jerry">Jerry</div>
       <div data-value="Torch">Torch</div>
       <div data-value="Jaxon">Jaxon</div>
+      <div data-value="Julian">Julian</div>
     </div>
   </div>
 </div>
