updated bleeder box

--- a/inventory.html
+++ b/inventory.html
@@ -454,13 +454,10 @@ const comboRecipes = {
     flour: 1
   },
   "The Bleeder Box": {
-    burger_buns: 5,
-    ground_beef: 5,
-    cheese_slices: 5,
-    potato: 10,
-    coffee_beans: 10,
-    sugar: 1,
-    flour: 1
+    burger_buns: 10,
+    ground_beef: 10,
+    cheese_slices: 10,
+    coffee_beans: 10
   },
   "Big Buns Deal": {
     burger_buns: 10,
