--- a/register.html
+++ b/register.html
@@ -585,10 +585,10 @@
       <button class="add-btn">Add</button>
     </div>
   </div>
-     <div class="item-card" data-name="The Bleeder Box" data-price="1050" data-category="Combos" data-image="assets/images/bleederbox.png">
+     <div class="item-card" data-name="The Bleeder Box" data-price="1200" data-category="Combos" data-image="assets/images/bleederbox.png">
     <img src="assets/images/combo.png" alt="The Bleeder Box" />
     <h3>The Bleeder Box</h3>
-    <p>$1050</p>
+    <p>$1200</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
       <button class="add-btn">Add</button>
@@ -1034,12 +1034,10 @@ const comboDetails = {
     ]
   },
   "The Bleeder Box": {
-    price: 1050,
+    price: 1200,
     components: [
-      { name: "The Bleeder", quantity: 5 },
-      { name: "Fries", quantity: 5 },
-      { name: "Coffee", quantity: 10 },
-      { name: "Rim Job", quantity: 1 }
+      { name: "The Bleeder", quantity: 10 },
+      { name: "Coffee", quantity: 10 }
     ]
   },
   "Patty Pounder Combo": {
