--- a/register.html
+++ b/register.html
@@ -813,9 +813,7 @@
     <option value="Mac">Munch</option>
     <option value="Mac">Mac</option>
     <option value="Slade">Slade</option>
-    <option value="Jack">Jack</option>
     <option value="Moe">Moe</option>
-    <option value="James">James</option>
     <option value="Emeric">Emeric</option>
     <option value="Chaos">Chaos</option>
     <option value="Rohan">Rohan</option>
@@ -824,7 +822,12 @@
     <option value="Jerry">Jerry</option>
     <option value="Torch">Torch</option>
     <option value="Jaxon">Jaxon</option>
-     <option value="Julian">Julian</option>
+    <option value="Julian">Julian</option>
+    <option value="Tony">Tony</option>
+    <option value="Richard">Richard</option>
+    <option value="Audrey">Audrey</option>
+    <option value="Rostova">Rostova</option>
+    <option value="Tyrone">Tyrone</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -846,6 +849,11 @@
       <div data-value="Torch">Torch</div>
       <div data-value="Jaxon">Jaxon</div>
       <div data-value="Julian">Julian</div>
+      <div data-value="Tony">Tony</div>
+    <div data-value="Richard">Richard</div>
+    <div data-value="Audrey">Audrey</div>
+    <div data-value="Rostova">Rostova</div>
+    <div data-value="Tyrone">Tyrone</div>
     </div>
   </div>
 </div>
