--- a/staffmeals.html
+++ b/staffmeals.html
@@ -357,9 +357,7 @@ select option:hover {
           <option value="Munch">Munch</option>
           <option value="Mac">Mac</option>
           <option value="Slade">Slade</option>
-          <option value="Jack">Jack</option>
           <option value="Moe">Moe</option>
-          <option value="James">James</option>
           <option value="Emeric">Emeric</option>
           <option value="Chaos">Chaos</option>
           <option value="Rohan">Rohan</option>
@@ -369,6 +367,11 @@ select option:hover {
           <option value="Torch">Torch</option>
           <option value="Jaxon">Jaxon</option>
           <option value="Julian">Julian</option>
+          <option value="Tony">Tony</option>
+          <option value="Richard">Richard</option>
+          <option value="Audrey">Audrey</option>
+          <option value="Rostova">Rostova</option>
+          <option value="Tyrone">Tyrone</option>
         </select>
       </div>
 
