changed coffee to soda

--- a/register.html
+++ b/register.html
@@ -1035,7 +1035,7 @@ const comboDetails = {
     components: [
       { name: "The Simply", quantity: 10 },
       { name: "Fries", quantity: 5 },
-      { name: "Coffee", quantity: 15 },
+      { name: "Soda", quantity: 15 },
       { name: "Rim Job", quantity: 1 }
     ]
   },
@@ -1043,14 +1043,14 @@ const comboDetails = {
     price: 1200,
     components: [
       { name: "The Bleeder", quantity: 10 },
-      { name: "Coffee", quantity: 10 }
+      { name: "Soda", quantity: 10 }
     ]
   },
   "Patty Pounder Combo": {
     price: 650,
     components: [
       { name: "The Prickley", quantity: 5 },
-      { name: "Coffee", quantity: 5 },
+      { name: "Soda", quantity: 5 },
       { name: "Cream Pie", quantity: 1 }
     ]
   }
