--- a/inventory.html
+++ b/inventory.html
@@ -449,7 +449,7 @@ const comboRecipes = {
     burger_buns: 5,
     chicken: 5,
     lettuce: 5,
-    coffee_beans: 5,
+    corn_syrup: 5,
     sugar: 1,
     flour: 1
   },
@@ -457,14 +457,14 @@ const comboRecipes = {
     burger_buns: 10,
     ground_beef: 10,
     cheese_slices: 10,
-    coffee_beans: 10
+    corn_syrup: 10
   },
   "Big Buns Deal": {
     burger_buns: 10,
     chicken: 10,
     bacon: 10,
     potato: 10,
-    coffee_beans: 15,
+    corn_syrup: 15,
     sugar: 1,
     flour: 1
   }
