--- a/orders.html
+++ b/orders.html
@@ -529,7 +529,7 @@ const comboDetails = {
     components: [
       { name: "The Simply", quantity: 10 },
       { name: "Fries", quantity: 5 },
-      { name: "Coffee", quantity: 15 },
+      { name: "Soda", quantity: 15 },
       { name: "Rim Job", quantity: 1 }
     ]
   },
@@ -537,14 +537,14 @@ const comboDetails = {
     price: 1050,
     components: [
       { name: "The Bleeder", quantity: 10 },
-      { name: "Coffee", quantity: 10 },
+      { name: "Soda", quantity: 10 },
     ]
   },
   "Patty Pounder Combo": {
     price: 650,
     components: [
       { name: "The Prickley", quantity: 5 },
-      { name: "Coffee", quantity: 5 },
+      { name: "Soda", quantity: 5 },
       { name: "Rim Job", quantity: 1 }
     ]
   }
