--- a/register.html
+++ b/register.html
@@ -603,6 +603,15 @@
       <button class="add-btn">Add</button>
     </div>
   </div>
+  <div class="item-card" data-name="Filthy Rich Combo" data-price="800" data-category="Combos" data-image="assets/images/rico.png">
+    <img src="assets/images/rico.png" alt="Filthy Rich Combo" />
+    <h3>Filthy Rich Combo</h3>
+    <p>$800</p>
+    <div class="add-controls">
+      <input type="number" class="quantity-input" min="1" value="1" />
+      <button class="add-btn">Add</button>
+    </div>
+  </div>
   <!-- ===== BURGERS ===== -->
 <div class="item-card" data-name="The Bleeder" data-price="90" data-category="Burgers" data-image="assets/images/bleeder-burger.png">
   <img src="assets/images/bleeder-burger.png" alt="Bleeder Burger" />
@@ -810,7 +819,7 @@
   <select id="employeeName" required style="display:none;">
     <option value="" disabled selected>Select employee</option>
     <option value="Savannah">Savannah</option>
-    <option value="Mac">Munch</option>
+    <option value="Munch">Munch</option>
     <option value="Mac">Mac</option>
     <option value="Slade">Slade</option>
     <option value="Moe">Moe</option>
@@ -826,6 +835,7 @@
     <option value="Tony">Tony</option>
     <option value="Richard">Richard</option>
     <option value="Audrey">Audrey</option>
+    <option value="Jimmy">Jimmy</option>
     <option value="Rostova">Rostova</option>
     <option value="Tyrone">Tyrone</option>
   </select>
@@ -848,6 +858,7 @@
       <div data-value="Jaxon">Jaxon</div>
       <div data-value="Julian">Julian</div>
       <div data-value="Tony">Tony</div>
+      <div data-value="Jimmy">Jimmy</div>
     <div data-value="Richard">Richard</div>
     <div data-value="Audrey">Audrey</div>
     <div data-value="Rostova">Rostova</div>
@@ -1046,15 +1057,15 @@ const comboDetails = {
       { name: "Soda", quantity: 10 }
     ]
   },
-  "Patty Pounder Combo": {
-    price: 650,
+  "Filthy Rich Combo": {
+    price: 800,
     components: [
-      { name: "The Prickley", quantity: 5 },
+      { name: "Money Shot", quantity: 5 },
       { name: "Soda", quantity: 5 },
-      { name: "Cream Pie", quantity: 1 }
     ]
   }
 };
+
 
 const ingredientLabels = {
   burger_buns: "burger buns",
