added rico combo

--- a/orders.html
+++ b/orders.html
@@ -547,7 +547,15 @@ const comboDetails = {
       { name: "Soda", quantity: 5 },
       { name: "Rim Job", quantity: 1 }
     ]
+  },
+   "Filthy Rich Combo": {
+    price: 800,
+    components: [
+      { name: "Money Shot", quantity: 5 },
+      { name: "Soda", quantity: 5 }
+    ]
   }
+  
 };
 
 /* -------- Daisy config (expandable) -------- */
