--- a/register.html
+++ b/register.html
@@ -836,6 +836,7 @@
     <option value="Richard">Richard</option>
     <option value="Audrey">Audrey</option>
     <option value="Jimmy">Jimmy</option>
+    <option value="Rufus">Rufus</option>
     <option value="Rostova">Rostova</option>
     <option value="Tyrone">Tyrone</option>
   </select>
@@ -861,6 +862,7 @@
       <div data-value="Jimmy">Jimmy</div>
     <div data-value="Richard">Richard</div>
     <div data-value="Audrey">Audrey</div>
+    <div data-value="Rufus">Rufus</div>
     <div data-value="Rostova">Rostova</div>
     <div data-value="Tyrone">Tyrone</div>
     </div>
