--- a/staffmeals.html
+++ b/staffmeals.html
@@ -370,6 +370,7 @@ select option:hover {
           <option value="Tony">Tony</option>
           <option value="Richard">Richard</option>
           <option value="Audrey">Audrey</option>
+          <option value="Rufus">Rufus</option>
           <option value="Rostova">Rostova</option>
           <option value="Tyrone">Tyrone</option>
         </select>
