--- a/register.html
+++ b/register.html
@@ -820,9 +820,7 @@
     <option value="" disabled selected>Select employee</option>
     <option value="Savannah">Savannah</option>
     <option value="Munch">Munch</option>
-    <option value="Mac">Mac</option>
     <option value="Slade">Slade</option>
-    <option value="Moe">Moe</option>
     <option value="Emeric">Emeric</option>
     <option value="Chaos">Chaos</option>
     <option value="Rohan">Rohan</option>
@@ -830,15 +828,12 @@
     <option value="Jesus">Jesus</option>
     <option value="Jerry">Jerry</option>
     <option value="Torch">Torch</option>
-    <option value="Jaxon">Jaxon</option>
     <option value="Julian">Julian</option>
-    <option value="Tony">Tony</option>
-    <option value="Richard">Richard</option>
     <option value="Audrey">Audrey</option>
     <option value="Jimmy">Jimmy</option>
     <option value="Rufus">Rufus</option>
-    <option value="Rostova">Rostova</option>
-    <option value="Tyrone">Tyrone</option>
+    <option value="Eric">Eric</option>
+    <option value="Andy">Andy</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -846,9 +841,7 @@
     <div class="select-items select-hide">
       <div data-value="Savannah">Savannah</div>
       <div data-value="Munch">Munch</div>
-      <div data-value="Mac">Mac</div>
       <div data-value="Slade">Slade</div>
-      <div data-value="Moe">Moe</div>
       <div data-value="Emeric">Emeric</div>
       <div data-value="Chaos">Chaos</div>
       <div data-value="Rohan">Rohan</div>
@@ -856,15 +849,13 @@
       <div data-value="Jesus">Jesus</div>
       <div data-value="Jerry">Jerry</div>
       <div data-value="Torch">Torch</div>
-      <div data-value="Jaxon">Jaxon</div>
       <div data-value="Julian">Julian</div>
-      <div data-value="Tony">Tony</div>
       <div data-value="Jimmy">Jimmy</div>
     <div data-value="Richard">Richard</div>
     <div data-value="Audrey">Audrey</div>
     <div data-value="Rufus">Rufus</div>
-    <div data-value="Rostova">Rostova</div>
-    <div data-value="Tyrone">Tyrone</div>
+    <div data-value="Eric">Eric</div>
+    <div data-value="Andy">Andy</div>
     </div>
   </div>
 </div>
