--- a/staffmeals.html
+++ b/staffmeals.html
@@ -355,9 +355,7 @@ select option:hover {
           <option value="" disabled selected>Select employee</option>
           <option value="Savannah">Savannah</option>
           <option value="Munch">Munch</option>
-          <option value="Mac">Mac</option>
           <option value="Slade">Slade</option>
-          <option value="Moe">Moe</option>
           <option value="Emeric">Emeric</option>
           <option value="Chaos">Chaos</option>
           <option value="Rohan">Rohan</option>
@@ -365,14 +363,13 @@ select option:hover {
           <option value="Jesus">Jesus</option>
           <option value="Jerry">Jerry</option>
           <option value="Torch">Torch</option>
-          <option value="Jaxon">Jaxon</option>
           <option value="Julian">Julian</option>
           <option value="Tony">Tony</option>
-          <option value="Richard">Richard</option>
           <option value="Audrey">Audrey</option>
+          <option value="Jimmy">Jimmy</option>
           <option value="Rufus">Rufus</option>
-          <option value="Rostova">Rostova</option>
-          <option value="Tyrone">Tyrone</option>
+          <option value="Eric">Eric</option>
+          <option value="Andy">Andy</option>
         </select>
       </div>
 
