--- a/register.html
+++ b/register.html
@@ -805,20 +805,13 @@
   <select id="employeeName" required style="display:none;">
     <option value="" disabled selected>Select employee</option>
     <option value="Savannah">Savannah</option>
-    <option value="Munch">Munch</option>
     <option value="Slade">Slade</option>
-    <option value="Emeric">Emeric</option>
-    <option value="Chaos">Chaos</option>
-    <option value="Rohan">Rohan</option>
+    <option value="Jack">Jack</option>
     <option value="Rico">Rico</option>
     <option value="Jesus">Jesus</option>
-    <option value="Jerry">Jerry</option>
     <option value="Torch">Torch</option>
-    <option value="Julian">Julian</option>
     <option value="Audrey">Audrey</option>
-    <option value="Jimmy">Jimmy</option>
     <option value="Rufus">Rufus</option>
-    <option value="Eric">Eric</option>
     <option value="Andy">Andy</option>
   </select>
   <!-- styled fake select -->
@@ -826,21 +819,13 @@
     <div class="select-selected">Select employee</div>
     <div class="select-items select-hide">
       <div data-value="Savannah">Savannah</div>
-      <div data-value="Munch">Munch</div>
+      <div data-value="Jack">Jack</div>
       <div data-value="Slade">Slade</div>
-      <div data-value="Emeric">Emeric</div>
-      <div data-value="Chaos">Chaos</div>
-      <div data-value="Rohan">Rohan</div>
       <div data-value="Rico">Rico</div>
       <div data-value="Jesus">Jesus</div>
-      <div data-value="Jerry">Jerry</div>
       <div data-value="Torch">Torch</div>
-      <div data-value="Julian">Julian</div>
-      <div data-value="Jimmy">Jimmy</div>
-    <div data-value="Richard">Richard</div>
     <div data-value="Audrey">Audrey</div>
     <div data-value="Rufus">Rufus</div>
-    <div data-value="Eric">Eric</div>
     <div data-value="Andy">Andy</div>
     </div>
   </div>
