--- a/staffmeals.html
+++ b/staffmeals.html
@@ -353,23 +353,15 @@ select option:hover {
         <label for="employeeSelect">Select Employee</label>
         <select id="employeeSelect" required>
           <option value="" disabled selected>Select employee</option>
-          <option value="Savannah">Savannah</option>
-          <option value="Munch">Munch</option>
-          <option value="Slade">Slade</option>
-          <option value="Emeric">Emeric</option>
-          <option value="Chaos">Chaos</option>
-          <option value="Rohan">Rohan</option>
-          <option value="Rico">Rico</option>
-          <option value="Jesus">Jesus</option>
-          <option value="Jerry">Jerry</option>
-          <option value="Torch">Torch</option>
-          <option value="Julian">Julian</option>
-          <option value="Tony">Tony</option>
-          <option value="Audrey">Audrey</option>
-          <option value="Jimmy">Jimmy</option>
-          <option value="Rufus">Rufus</option>
-          <option value="Eric">Eric</option>
-          <option value="Andy">Andy</option>
+           <option value="Savannah">Savannah</option>
+    <option value="Slade">Slade</option>
+    <option value="Jack">Jack</option>
+    <option value="Rico">Rico</option>
+    <option value="Jesus">Jesus</option>
+    <option value="Torch">Torch</option>
+    <option value="Audrey">Audrey</option>
+    <option value="Rufus">Rufus</option>
+    <option value="Andy">Andy</option>
         </select>
       </div>
 
