--- a/staffmeals.html
+++ b/staffmeals.html
@@ -362,6 +362,8 @@ select option:hover {
     <option value="Audrey">Audrey</option>
     <option value="Rufus">Rufus</option>
     <option value="Andy">Andy</option>
+    <option value="Bezzy">Bezzy</option>
+    <option value="Wyatt">Wyatt</option>
         </select>
       </div>
 
