--- a/register.html
+++ b/register.html
@@ -804,6 +804,8 @@
     <option value="Audrey">Audrey</option>
     <option value="Rufus">Rufus</option>
     <option value="Andy">Andy</option>
+    <option value="Bezzy">Bezzy</option>
+    <option value="Wyatt">Wyatt</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -818,6 +820,8 @@
     <div data-value="Audrey">Audrey</div>
     <div data-value="Rufus">Rufus</div>
     <div data-value="Andy">Andy</div>
+    <div data-value="Bezzy">Bezzy</div>
+    <div data-value="Wyatt">Wyatt</div>
     </div>
   </div>
 </div>
