--- a/register.html
+++ b/register.html
@@ -806,6 +806,7 @@
     <option value="Andy">Andy</option>
     <option value="Bezzy">Bezzy</option>
     <option value="Wyatt">Wyatt</option>
+    <option value="Justin">Justin</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -822,6 +823,7 @@
     <div data-value="Andy">Andy</div>
     <div data-value="Bezzy">Bezzy</div>
     <div data-value="Wyatt">Wyatt</div>
+    <div data-value="Justin">Justin</div>
     </div>
   </div>
 </div>
