--- a/staffmeals.html
+++ b/staffmeals.html
@@ -364,6 +364,7 @@ select option:hover {
     <option value="Andy">Andy</option>
     <option value="Bezzy">Bezzy</option>
     <option value="Wyatt">Wyatt</option>
+    <option value="Justin">Justin</option>
         </select>
       </div>
 
