--- a/orders.html
+++ b/orders.html
@@ -134,8 +134,8 @@
   /* stronger visual change */
   color: #666;                              /* dim text a bit */
   text-decoration: line-through;            /* keep strike */
-  text-decoration-thickness: 3px;           /* thicker line */
-  text-decoration-color: rgba(0,0,0,.45);   /* darker strike color */
+  text-decoration-thickness: 4px;           /* thicker line */
+  text-decoration-color: #393737;   /* darker strike color */
 }
 
 /* If you want the whole row slightly faded too (optional) */
