--- a/home.html
+++ b/home.html
@@ -345,7 +345,7 @@
         <span>
           ✅ Remember to clock in/out at start of shift and end of shift! &nbsp;&nbsp;|&nbsp;&nbsp;
           ⏰ Clock in and out on emails for weekly bonuses &nbsp;&nbsp;|&nbsp;&nbsp;
-          💸 Double-check invoices before sending &nbsp;&nbsp;|&nbsp;&nbsp;
+          💸 Double-check invoices before sending
         </span>
       </div>
 
