--- a/inventory.html
+++ b/inventory.html
@@ -524,7 +524,7 @@
           burger_buns: 5,
           ground_beef: 15,
           cheese_slices: 5,
-          potato: 10,
+          onion: 10,
           corn_syrup: 15,
           ice_cream: 5,
           vanilla: 10,
