--- a/register.html
+++ b/register.html
@@ -1008,7 +1008,7 @@ const comboDetails = {
     price: 1800,
     components: [
       { name: "Heart Stopper", quantity: 5 },
-      { name: "Fries", quantity: 5 },
+      { name: "Onion Rings", quantity: 5 },
       { name: "Soda", quantity: 15 },
       { name: "Ice Cream", quantity: 5 }
     ]
