--- a/register.html
+++ b/register.html
@@ -810,6 +810,7 @@
     <option value="Rico">Rico</option>
     <option value="Jesus">Jesus</option>
     <option value="Torch">Torch</option>
+    <option value="Bart">Bart</option>
     <option value="Audrey">Audrey</option>
     <option value="Rufus">Rufus</option>
     <option value="Andy">Andy</option>
@@ -827,6 +828,7 @@
       <div data-value="Rico">Rico</div>
       <div data-value="Jesus">Jesus</div>
       <div data-value="Torch">Torch</div>
+      <div data-value="Bart">Bart</div>
     <div data-value="Audrey">Audrey</div>
     <div data-value="Rufus">Rufus</div>
     <div data-value="Andy">Andy</div>
