--- a/register.html
+++ b/register.html
@@ -815,6 +815,8 @@
     <option value="Rufus">Rufus</option>
     <option value="Andy">Andy</option>
     <option value="Bezzy">Bezzy</option>
+    <option value="Marko">Marko</option>
+    <option value="Jaxon">Jaxon</option>
     <option value="Wyatt">Wyatt</option>
     <option value="Justin">Justin</option>
   </select>
@@ -833,6 +835,8 @@
     <div data-value="Rufus">Rufus</div>
     <div data-value="Andy">Andy</div>
     <div data-value="Bezzy">Bezzy</div>
+    <div data-value="Marko">Marko</div>
+    <div data-value="Jaxon">Jaxon</div>
     <div data-value="Wyatt">Wyatt</div>
     <div data-value="Justin">Justin</div>
     </div>
