--- a/staffmeals.html
+++ b/staffmeals.html
@@ -382,6 +382,8 @@
             <option value="Rufus">Rufus</option>
             <option value="Andy">Andy</option>
             <option value="Bezzy">Bezzy</option>
+            <option value="Marko">Marko</option>
+            <option value="Jaxon">Jaxon</option>
             <option value="Wyatt">Wyatt</option>
             <option value="Justin">Justin</option>
           </select>
